--- a/src/styles/user.scss
+++ b/src/styles/user.scss
@@ -46,39 +46,44 @@
     border-radius: utilities.$border_radius;
     background:#FFFFFF;
     position:relative;
-    .user_general_info_section{
-          display:flex;
-    // justify-content: space-between;
-    align-items: center;
-    }
+    
 }
 .user_general_section{
     padding-bottom: 0;
+    .user_general_info_section{
+    align-items: center;
+    }
+    .user_tier{
+        display:flex !important;
+        // justify-content: space-between;
+        // background:red;
+    }
 }
+
 .user_section_one_text{
     display: flex;
     flex-direction: column;
     gap:30px;
-    // width:200px;
-    padding: 0 40px;
+    padding: 0px;
+    margin: 15px 0;
     box-sizing: border-box;
 }
 .user_section_one_text:nth-child(3){
-    border:1px solid #545F7D;
-    border-top:none;
-    border-bottom:none;
+    border:none;
 }
 .user_section_one_tabs{
     display:flex;
     padding-top:20px;
     width:100%;
+    overflow-x: scroll;
     justify-content: space-between;
-border-bottom: 2px solid transparent;
+    border-bottom: 2px solid transparent;
     .selected{
         border-bottom:2px solid utilities.$secondary_color;
         color:utilities.$secondary_color;
     }
     .user_section_one_tab{
+        flex-shrink: 0;
         padding:0 20px;
     padding-bottom: 3px;
     cursor:pointer;
@@ -90,6 +95,16 @@ border-bottom: 2px solid transparent;
     }
     }
 }
+.user_not_found{
+    padding:40px 0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+    div {
+        margin:20px 0;
+    }
+  }
 .user_profile_tab{
 
     // opacity: 0.1;
@@ -97,7 +112,7 @@ border-bottom: 2px solid transparent;
     border-top: 1px solid #213F7D;
   .user_profile_tab_info{ 
     display:grid;
-    grid-template-columns:repeat(4,1fr); 
+    grid-template-columns:repeat(auto-fit, minmax(220px,1fr)); 
     grid-row-gap:25px;
    margin:25px 0;
     p {
@@ -107,4 +122,39 @@ border-bottom: 2px solid transparent;
     }
 }
 }
+.not-found-tab{
+    padding:50px 0;
+    text-align: center;
+}
+.desktop_button{
+    display: none;
+}
+.mobile_button{
+    margin:20px 0;
+}
 
+@media (min-width: utilities.$breakpoint-tablet) {
+    .user_general_info_section{
+          display:flex;
+    }
+    .user_section_one_text:nth-child(3){
+    border:1px solid #545F7D;
+    border-top:none;
+    border-bottom:none;
+}
+.user_section_one_text{
+    padding:0 40px;
+    margin: 15px 0;
+}
+.desktop_button{
+    display: block;
+}
+.mobile_button{
+    display: none;
+}
+.user_profile_tab_info{
+    grid-template-columns:repeat(4,1fr);
+     
+}
+}
+ 
